fix: change spacing for tabs secondary ui

--- a/src/assets/styles/components/_tab.scss
+++ b/src/assets/styles/components/_tab.scss
@@ -127,7 +127,7 @@
   --ds-tabs-primary-border-default: var(--ds-color-divider);
 
   --ds-tabs-secondary-bg: var(--ds-color-bg-container-light);
-  --ds-tabs-secondary-padding: var(--ds-space-8);
+  --ds-tabs-secondary-padding: var(--ds-space-4);
   --ds-tabs-secondary-border-radius: var(--border-radius-12);
   --ds-tabs-secondary-tab-heightt: var(--ds-size-40);
   --ds-tabs-secondary-tab-padding: var(--ds-space-10) var(--ds-space-12);
